--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -5,9 +5,16 @@
   left: 0;
   right: 0;
   top: 50%;
+  border: 20px;
   transform: translateY(-50%);
 }
 
+ion-title{
+  text-align: center;
+
+  //position: absolute;
+ // left: 20;
+}
 #container strong {
   font-size: 20px;
   line-height: 26px;
@@ -25,3 +32,56 @@
 #container a {
   text-decoration: none;
 }
+
+.myback{
+  --background: #075e54;
+  color: #F5F5F5;
+  }
+
+  
+.myback1{
+  --background: #3caa9d;
+  color: #F5F5F5;
+  }
+
+  .background{
+   --background: #fff url("../../assets/images/223.jpg") no-repeat center center;
+  // --background:#c7d4ca;
+   }
+
+   .iconsize{
+    font-size: 20px; //Preferred size here
+    color: #F5F5F5;
+}
+
+.ion-card-design {
+  border-radius: 20px;
+ // --background:  #353838;
+  font-weight: bold;
+  text-align: center;
+ // color:white ;
+  }
+
+  .cardalign {
+    font-weight: bold;
+    text-align: center;
+    text-emphasis-color:#c7d4ca ;
+  }
+
+  .fontsize1{
+    font-size: 25px;
+
+    
+    color:#800000
+  }
+
+ .mid{
+ // text-align: center;
+
+  position: absolute;
+  left: 10%;
+  right: 0;
+  top: 30%;
+  //border: 20px;
+  transform: translateY(-50%);
+ } 
