--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -89,34 +89,6 @@
 
 
 
-    <ion-col size="2" (click)="westws()" >
-      <ion-card class="ion-card-design" color="">
-        <ion-card-header style="text-align: center;">
-          <ion-card-subtitle class="cardalign" >
-           Fiware PoC Entity
-            <ion-icon slot="icon-only" ios="alert-circle-outline" md="alert-circle-outline">
-            </ion-icon>  
-          </ion-card-subtitle>
-          <div class="div1">
-            <ion-grid>
-              <ion-row>
-                <ion-col size="1">
-                  
-                  </ion-col>
-                  <ion-col size="8" >
-                    <ion-img style="width :140px ;height :140px" src="https://cdn.iconscout.com/icon/premium/png-256-thumb/weather-forecast-station-1767330-1503594.png">
-                  </ion-img>
-                </ion-col>
-              </ion-row>
-            </ion-grid>
-          </div>
-        <ion-card-title class="fontsize1"  >
-      <b> Centeral</b><br> Weather Station
-        </ion-card-title>
-
-      </ion-card-header>
-      </ion-card>
-    </ion-col>
 
 
     <ion-col size="2" (click)="eastws()" >
@@ -189,6 +161,6 @@
 
 
   </div>  
-  
+  <h4 class="container2">CENTRAL WEATHER MONITORING SYSTEM</h4> 
 </ion-content>
  
