--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -79,9 +79,31 @@ ion-title{
  // text-align: center;
 
   position: absolute;
-  left: 10%;
+  left: 20%;
   right: 0;
+  width: 100%;
   top: 30%;
   //border: 20px;
   transform: translateY(-50%);
  } 
+
+ 
+.container2 {
+  text-align: center;
+color: #F5F5F5;
+
+
+  position:absolute; 
+ // top:200px; 
+  left:30%; 
+  width:40%; 
+  height:100;
+ // border:10px;
+  top:93%;
+  //align-items: center; 
+  justify-content: center;
+  
+  right: 10;
+
+  transform: translateY(-50%);
+}
