--- a/src/app/north-ws/north-ws.page.scss
+++ b/src/app/north-ws/north-ws.page.scss
@@ -121,6 +121,35 @@
 
 
   .iconsize{
-    font-size: 30px; //Preferred size here
+    font-size: 40px; //Preferred size here
     color: #F5F5F5;
+}
+
+#notification-button {            
+  position: relative;
+  width: 42px;
+  top:1px;
+  right: 1px;
+  overflow: visible!important;
+}
+
+#notifications-badge {
+  background-color: red;
+  position: absolute;
+  top: -3px;
+  right: -3px;
+  border-radius: 100%;
+}
+ion-button {
+	ion-badge {
+		position: absolute;
+		top: -0.6rem;
+		right: -0.4rem;
+    
+		opacity: 0.9;
+
+		& ~ ion-icon {
+			margin-right: 2rem;
+		}
+	}
 }
