Shaibal button added for test

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   
   <ion-toolbar class="myback">
-    <ion-title >Entity Manager</ion-title>
+    <ion-title >CENTRAL WEATHER MONITORING SYSTEM</ion-title>
     <ion-buttons slot="end">
        <ion-button class="iconsize" routerLink="/search">
           <ion-icon slot="end"name="search-sharp"></ion-icon>
@@ -161,6 +161,6 @@
 
 
   </div>  
-  <h4 class="container2">CENTRAL WEATHER MONITORING SYSTEM</h4> 
+<!--  <h4 class="container2">CENTRAL WEATHER MONITORING SYSTEM</h4>  -->
 </ion-content>
  
