--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -3,9 +3,9 @@
   <ion-toolbar class="myback">
     <ion-title >CENTRAL WEATHER MONITORING SYSTEM</ion-title>
     <ion-buttons slot="end">
-       <ion-button class="iconsize" routerLink="/search">
+    <!--   <ion-button class="iconsize" routerLink="/search">
           <ion-icon slot="end"name="search-sharp"></ion-icon>
-        </ion-button>
+        </ion-button>-->
         <ion-button class="iconsize" (click)="alertmsg()">
           <ion-icon slot="icon-only" ios="notifications-outline" md="notifications-outline"></ion-icon>
         </ion-button>
