--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -41,5 +41,5 @@
 
     </ion-card>
   </div>
-  <h4 class="container2">Developed by Arun Rajput</h4> 
+ <!-- <h4 class="container2">Developed by Arun Rajput</h4> -->
 </ion-content>
